name:                Vec-Transform
version:             1.0.7
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        ""
copyright:           Tobias Bexelius
maintainer:          Tobias Bexelius
synopsis:            Obsolete
description:         This package is now obsolete since all functions have moved to the Vec package. This package simply reexports them for backward compatibility.
category:            Math, Graphics
author:              Tobias Bexelius
homepage:            https://github.com/tobbebex/Vec-Transform
library 
  build-depends:   
                   base >= 4 && <5,
                   Vec == 1.0.1
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Data.Vec.LinAlg.Transform3D

